--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
-    <script src="dist/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
