--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Brick Breaker Game</title>
+    <title>Brick Breaker</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
