--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Classic Atari Brick Breaker, created by ChatGPT-o1"
+    />
     <title>Brick Breaker</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
